--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "gen": "plop"
+    "gen": "plop",
+    "gen:graphql": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typescript-graphql-request": "^4.4.5",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.2.0",
     "next": "latest",
     "plop": "^3.0.5",
     "react": "^17.0.2",
@@ -14,6 +19,10 @@
     "react-use": "^17.3.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.8",
+    "@graphql-codegen/typescript-operations": "2.3.5",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
