--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "gen": "plop",
     "gen:graphql": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript-graphql-request": "^4.4.5",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
@@ -26,6 +26,8 @@
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "eslint": "8.12.0",
+    "eslint-config-next": "12.1.4",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
