--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@graphql-codegen/typescript-graphql-request": "^4.4.5",
+    "clsx": "^1.1.1",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
     "next": "latest",
