--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "next start",
     "lint": "next lint",
     "gen": "plop",
-    "gen:graphql": "graphql-codegen --config codegen.yml"
+    "gen:graphql": "graphql-codegen --config codegen.yml",
+    "e2e": "cypress run --headless",
+    "e2e:gui": "cypress open",
+    "test:dev": "start-server-and-test 'yarn dev' http://localhost:3000 'yarn e2e:gui'",
+    "test:prod": "yarn build && start-server-and-test start http://localhost:3000 'yarn e2e'"
   },
   "dependencies": {
     "@graphql-codegen/typescript-graphql-request": "^4.4.5",
@@ -24,15 +28,18 @@
     "@graphql-codegen/introspection": "2.1.1",
     "@graphql-codegen/typescript": "2.4.8",
     "@graphql-codegen/typescript-operations": "2.3.5",
+    "@types/jest": "^27.4.1",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "cypress": "^9.5.3",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
+    "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4"
+    "typescript": "^4.6.3"
   }
 }
